--- a/site/reading-emails-app/Dockerfile
+++ b/site/reading-emails-app/Dockerfile
@@ -1,11 +1,23 @@
 
 FROM node:latest as build
-WORKDIR /usr/local/app
-COPY ./ /usr/local/app/
+WORKDIR /app
+COPY ./ /app/
 RUN npm install
 RUN npm run build --prod
 
 
 FROM nginx:latest
-COPY --from=build /usr/local/app/dist/reading-emails-app /usr/share/nginx/html
+COPY --from=build /app/dist/reading-emails-app /usr/share/nginx/html
+
+COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+
+RUN touch /var/run/nginx.pid && \
+  chown -R www-data:www-data /var/run/nginx.pid && \
+  chown -R www-data:www-data /var/cache/nginx
+
+USER www-data
+
+
 EXPOSE 80
